--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,11 @@
-
 <div class="logo">
     <a href="https://www.creative-tim.com" class="simple-text logo-mini">
-      <div class="logo-img">
-          <img src="./assets/img/angular2-logo-white.png"/>
-      </div>
+        <div class="logo-img">
+            <img src="./assets/img/angular2-logo-white.png" />
+        </div>
     </a>
     <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-        Creative Tim
+        Ganesh Avhad
     </a>
 </div>
 <div class="sidebar-wrapper">
