--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -4,8 +4,16 @@
   <div class="row">
     <div class="col-md-12">
       <div class="card">
-        <div class="card-header">
-          <h4 class="card-title"> Simple Table</h4>
+        <div class="card-header row">
+          <div class="col-sm-10">
+            <h4 class="card-title">Playlists</h4>
+          </div>
+          <div class="col-sm-2">
+            <button class="btn-primary">
+              <!-- <input type="file" id="exampleFormControlFile1"> -->
+              Upload Excel
+            </button>
+          </div>
         </div>
         <div class="card-body">
           <div class="table-responsive">
