--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text logo-mini">
+    <a class="simple-text logo-mini">
         <div class="logo-img">
-            <img src="./assets/img/angular2-logo-white.png" />
+            <img src="./assets/img/E-LEarning.png" />
         </div>
     </a>
-    <a href="https://www.creative-tim.com" class="simple-text logo-normal">
+    <a class="simple-text logo-normal">
         Ganesh Avhad
     </a>
 </div>
